--- a/ui.apps/src/main/content/jcr_root/conf/aviva-demo/settings/wcm/templates/.content.xml
+++ b/ui.apps/src/main/content/jcr_root/conf/aviva-demo/settings/wcm/templates/.content.xml
@@ -3,4 +3,5 @@
     jcr:mixinTypes="[rep:AccessControllable]"
     jcr:primaryType="cq:Page">
     <landing-page/>
+    <redirect-page/>
 </jcr:root>
