--- a/ui.apps/src/main/content/jcr_root/apps/aviva-demo/components/content/grid/v1/articlegrid/articlegrid.html
+++ b/ui.apps/src/main/content/jcr_root/apps/aviva-demo/components/content/grid/v1/articlegrid/articlegrid.html
@@ -1,11 +1,7 @@
 
 <div data-sly-use.templates="core/wcm/components/commons/v1/templates.html"
 		data-sly-unwrap="${wcmmode.disabled}">
-
-
-
-
-
+fsdgsdfg
 
 <sly data-sly-use.relatedUse="${'com.avivademo.aem.models.ArticleGrid'}" />  
 <div class="col-xs-12 col-sm-12 explore-articles explore-articles-multimedia clearfix">
